--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ag-grid-react": "^34.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "firebase": "^12.5.0",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
     "react": "^18",
